; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_registry.c_get_temp_buffer.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_registry.c_get_temp_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_temp_buffer.list = internal global [32 x i8*] zeroinitializer, align 16
@get_temp_buffer.pos = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_temp_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_temp_buffer(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @get_temp_buffer.pos, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @get_temp_buffer.pos, align 4
  %7 = sext i32 %6 to i64
  %8 = urem i64 %7, 32
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [32 x i8*], [32 x i8*]* @get_temp_buffer.list, i64 0, i64 %11
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %1
  %16 = call i32 (...) @GetProcessHeap()
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds [32 x i8*], [32 x i8*]* @get_temp_buffer.list, i64 0, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = load i32, i32* %2, align 4
  %22 = call i8* @HeapReAlloc(i32 %16, i32 0, i8* %20, i32 %21)
  store i8* %22, i8** %3, align 8
  br label %27

23:                                               ; preds = %1
  %24 = call i32 (...) @GetProcessHeap()
  %25 = load i32, i32* %2, align 4
  %26 = call i8* @HeapAlloc(i32 %24, i32 0, i32 %25)
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %23, %15
  %28 = load i8*, i8** %3, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %27
  %31 = load i8*, i8** %3, align 8
  %32 = load i32, i32* %4, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds [32 x i8*], [32 x i8*]* @get_temp_buffer.list, i64 0, i64 %33
  store i8* %31, i8** %34, align 8
  br label %35

35:                                               ; preds = %30, %27
  %36 = load i8*, i8** %3, align 8
  ret i8* %36
}

declare dso_local i8* @HeapReAlloc(i32, i32, i8*, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
